examples/pass/fueraMain2.c
int x = 3;
int main(){
   print("no deberia imprimir esto, fueraMain2 %i: ", x);
   return 0;
}