examples/error/fueraMain2.c
int x = 3;
int main(){
   printf("no deberia imprimir esto, fueraMain2 %i: ", x);
   return 0;
}
